fix: scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -459,6 +459,7 @@ table thead th {
 	::-webkit-scrollbar {
 		width: 8px;
 		height: 8px;
+		-webkit-overflow-scrolling: auto;
 	}
 
 	/* Track */
